objects/TASKRAY__Project__c.object
<CustomObject>
    <fields>
        <fullName>TASKRAY__Dependent_Update_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for dependency calculations. It marks a TaskRay task as potentially requiring an update based upon its predecessor receiving an update.</description>
        <label>Dependent Update Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__ProjectColor__c</fullName>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Child Projects</relationshipLabel>
        <relationshipName>Project_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Project_Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TASKRAY__Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__TextColor__c</fullName>
        <label>Deprecated (Do Not Use)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Client associated with the project.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>trProjectAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trActualHours__c</fullName>
        <label>Actual Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trAvailableExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows Sites guest users access to the project</description>
        <label>Available for External Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trBusinessHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines project’s default business hour availability. Tasks will not be scheduled for any days designated as non-working days.</description>
        <label>Project Schedule</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>TaskRay_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trCompletionPercentage__c</fullName>
        <label>Progress</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trEstimatedHours__c</fullName>
        <label>Estimated Time (hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trExternalLink__c</fullName>
        <description>This field will be populated with a link to a public site when the "Available for external sharing" checkbox is checked</description>
        <formula>IF( TASKRAY__trAvailableExternal__c ,
  HYPERLINK( $Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trPublicSiteURL__c +'?pid='+ Id +'&amp;fullScreen=true&amp;view=planning', $Setup.TASKRAY__trGlobalSettings__c.TASKRAY__trPublicSiteURL__c +'?pid='+ Id +'&amp;fullScreen=true&amp;view=planning'),
  null)</formula>
        <label>External Sharing Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trNickname__c</fullName>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TASKRAY__trOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The opportunity a sub-project is associated with (if it is tied to a legacy opportunity and new opportunity, this represents the new opportunity).</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>trProjectOpportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trPendingInterviewCount__c</fullName>
        <label>Pending Interview Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateLibrarySource__c</fullName>
        <label>TaskRay Template Library Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplateSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Source</label>
        <referenceTo>TASKRAY__Project__c</referenceTo>
        <relationshipLabel>Cloned Projects</relationshipLabel>
        <relationshipName>Template_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TASKRAY__trTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Discussion_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Discussion Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technology_Requirements_Detail__c</fullName>
        <label>Technology Requirements Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <formula>TEXT(TASKRAY__trOpportunity__r.Therapeutic_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Therapeutic Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toggl_Auto_Creation_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toggl Auto-Creation Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toggl_Id__c</fullName>
        <label>Toggl Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Submission__c</fullName>
        <inlineHelpText>The type of submission to be produced by this sub-project. Unique submission types must be logged in their own sub-projects.</inlineHelpText>
        <label>Type of Submission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Conference or congress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_DRE_Again__c</fullName>
        <label>Use DRE Again</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Not at all</fullName>
                </value>
                <value>
                    <fullName>2 - Unsatisfactory</fullName>
                </value>
                <value>
                    <fullName>3 - Neutral</fullName>
                </value>
                <value>
                    <fullName>4 - Satisfactory</fullName>
                </value>
                <value>
                    <fullName>5 - Completely</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VP_Client_Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Client Services</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_Consulting_Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Consulting Services</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskRay_Projects7njT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Enter a description of how the project, when successfully completed, will benefit the client stakeholders. Be specific regarding the previously stated Problem.</inlineHelpText>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Working_Group__c</fullName>
        <inlineHelpText>For Sanofi projects, the only acceptable values are DCV, GEM, SGZ, CHC, SPV, or All Sanofi</inlineHelpText>
        <label>Working Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Praluent CV Events</fullName>
                </value>
                <value>
                    <fullName>Clopidogrel Publications</fullName>
                </value>
                <value>
                    <fullName>Lovenox Health Canada Indication</fullName>
                </value>
                <value>
                    <fullName>Patient Centricity--Depression</fullName>
                </value>
                <value>
                    <fullName>Enoxaparin Publications</fullName>
                </value>
                <value>
                    <fullName>CHC South Africa Strategy</fullName>
                </value>
                <value>
                    <fullName>Sanofi Master Library</fullName>
                </value>
                <value>
                    <fullName>Irbesartan Publications</fullName>
                </value>
                <value>
                    <fullName>Toujeo Medical Strategy</fullName>
                </value>
                <value>
                    <fullName>Patient Centricity--Patient Engagement</fullName>
                </value>
                <value>
                    <fullName>Patient Centricity--Devices</fullName>
                </value>
                <value>
                    <fullName>HEVA HTA Submissions</fullName>
                </value>
                <value>
                    <fullName>Sotagliflozin Library Updates</fullName>
                </value>
                <value>
                    <fullName>NICE Guideline Replication</fullName>
                </value>
                <value>
                    <fullName>Diabetes China Strategy</fullName>
                </value>
                <value>
                    <fullName>Diabetes Literature Updates</fullName>
                </value>
                <value>
                    <fullName>Hypoglycemia South Africa Strategy</fullName>
                </value>
                <value>
                    <fullName>Lighthouse Soliqua RWE Pilot</fullName>
                </value>
                <value>
                    <fullName>Soliqua Trial Strategy</fullName>
                </value>
                <value>
                    <fullName>Patient Centricity--Flu Vaccine and Diabetes</fullName>
                </value>
                <value>
                    <fullName>Glargine Cancer Risk</fullName>
                </value>
                <value>
                    <fullName>Patient Centricity--Nurse Interventions</fullName>
                </value>
                <value>
                    <fullName>HEVA Soliqua Strategy</fullName>
                </value>
                <value>
                    <fullName>Pharmacovigilance euDKA</fullName>
                </value>
                <value>
                    <fullName>HEVA Obesity Strategy</fullName>
                </value>
                <value>
                    <fullName>Sotagliflozin HTA Submissions</fullName>
                </value>
                <value>
                    <fullName>HEVA Hypoglycemia Strategy</fullName>
                </value>
                <value>
                    <fullName>Diabetes Algeria Strategy</fullName>
                </value>
                <value>
                    <fullName>Genzyme Library</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Assigned_Library_Studies__c</fullName>
        <inlineHelpText>The number of references accepted after title/abstract screening.</inlineHelpText>
        <label># of Assigned Library Studies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Data_Studies_Unique_to_Contract__c</fullName>
        <label># of Data Studies Unique to Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>This is the primary TaskRay object for projects.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <label>TaskRay Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>My_Projects_Sub_Projects</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Parent__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Projects &amp; Sub-Projects</label>
    </listViews>
    <listViews>
        <fullName>Project_Templates</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Secondary_Project_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__trTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Project Templates</label>
    </listViews>
    <listViews>
        <fullName>TASKRAY__AllProjects</fullName>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>TASKRAY__Archived_and_Templates</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>TASKRAY__Project_Start__c</columns>
        <columns>TASKRAY__Project_End__c</columns>
        <columns>TASKRAY__Status__c</columns>
        <columns>TASKRAY__trTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASKRAY__Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASKRAY__trTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Archived and Templates</label>
    </listViews>
    <listViews>
        <fullName>trUnassigned_Project</fullName>
        <filterScope>Queue</filterScope>
        <label>TaskRay Unassigned</label>
        <queue>trUnassigned</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Project</fullName>
        <active>true</active>
        <description>Parent Projects</description>
        <label>Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sub_Project</fullName>
        <active>true</active>
        <description>"Child" project. Must be tied to a parent project.</description>
        <label>Sub-Project</label>
    </recordTypes>
    <sharingReasons>
        <fullName>TASKRAY__Project_Member_added_in_TaskRay__c</fullName>
        <label>Added to TaskRay Project Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>FQ_ID_Required_for_Database_Deliverable</fullName>
        <active>false</active>
        <description>Requires FQ ID field when Operations Deliverable contains 'database' or 'Term Index'</description>
        <errorConditionFormula>AND(
$RecordType.Name = "Sub-Project",
 ISBLANK(FQ_ID__c),
 $Profile.Name  &lt;&gt; "System Administrator",

OR(
 INCLUDES( Operations_Deliverable__c , "Database"),
 INCLUDES( Operations_Deliverable__c , "Term Index") 
) 

)</errorConditionFormula>
        <errorDisplayField>FQ_ID__c</errorDisplayField>
        <errorMessage>FQ ID is required when Operations Deliverable contains "Database" or "Term Index"</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Name_Must_Be_Unique</fullName>
        <active>false</active>
        <description>Requires Project Name must be Unique.</description>
        <errorConditionFormula>and(
    Name = VLOOKUP
       ($ObjectType.TASKRAY__Project__c.Fields.Name , $ObjectType.TASKRAY__Project__c.Fields.Name, Name ),

    not(
     Id=VLOOKUP
         ($ObjectType.TASKRAY__Project__c.Fields.Id , $ObjectType.TASKRAY__Project__c.Fields.Name, Name )))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Project Name (PICO ID) Must be Unique</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__External_Sharing_Restricted_to_Owner</fullName>
        <active>false</active>
        <description>This validation rule prevents anyone except the project owner from making a project available for external users</description>
        <errorConditionFormula>ISCHANGED( TASKRAY__trAvailableExternal__c ) &amp;&amp;
TASKRAY__trAvailableExternal__c == true &amp;&amp;
$User.Id !=  OwnerId</errorConditionFormula>
        <errorMessage>Only the Project Owner can make the project available for external sharing. Contact your system administrator if you would like access to this field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TASKRAY__No_spaces_in_Nickname</fullName>
        <active>true</active>
        <errorConditionFormula>REGEX( TASKRAY__trNickname__c  ,".*\\s+.*")</errorConditionFormula>
        <errorMessage>Project Nicknames cannot have spaces</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Tickets_Cannot_be_None</fullName>
        <active>true</active>
        <description>Contracted Services &amp; Operation Deliverable cannot both be set to "None"</description>
        <errorConditionFormula>AND(
NOT(ISNEW()),
$RecordType.Name = "Sub-Project", 
ISPICKVAL(Contracted_Service__c, "None"),
INCLUDES(Operations_Deliverable__c, "None"), 
NOT($Profile.Name = "System Administrator")
)</errorConditionFormula>
        <errorMessage>Contracted Services &amp; Operations Deliverable cannot both be set to "None". Please select an applicable value for one or both fields and remove 'None'.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Workstream_Required</fullName>
        <active>false</active>
        <description>Requires Workstream to be selected after the project updated.</description>
        <errorConditionFormula>AND(
 NOT(ISNEW()),
$RecordType.Name = "Project",
 ISBLANK(TEXT(Workstream__c)) 

)</errorConditionFormula>
        <errorDisplayField>Workstream__c</errorDisplayField>
        <errorMessage>Workstream must be selected.</errorMessage>
    </validationRules>
</CustomObject>